logos fixed on mobile

--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -346,7 +346,7 @@ ul li:hover svg path.stroke-hover {
 }
 
 .app-container .app img {
-  height: 44px;
+  /* height: 44px; */
 }
 
 .app-container .app .tradingview-form input {
@@ -624,7 +624,7 @@ ul li:hover svg path.stroke-hover {
   }
 
   .app-container .app img {
-    height: 20px;
+    /* height: 20px; */
     margin-top: 0px;
   }
 
@@ -728,6 +728,7 @@ ul li:hover svg path.stroke-hover {
     list-style-type: disc;
     margin-left: 15px;
   }
+  
 }
 
 /* Basic + and Premium Mobile END */
